Use baseimage support for gradle installDist